--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend del restaurant coder coffe",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "babel-node src/index.js",
+    "dev": "nodemon --exec babel-node src/index.js"
   },
   "keywords": [
     "backend",
